--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,12 @@
         </license>
     </licenses>
 
+    <scm>
+        <connection>scm:git:git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</connection>
+        <developerConnection>scm:git:git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</developerConnection>
+        <url>git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</url>
+    </scm>
+
     <developers>
         <developer>
             <id>vblouin</id>
@@ -41,8 +47,17 @@
             <roles>
                 <role>developer</role>
             </roles>
+            <organization>bubl.guru</organization>
+            <organizationUrl>about.bubl.guru</organizationUrl>
         </developer>
     </developers>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -58,8 +73,25 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.sonatype.plugins</groupId>
+                <artifactId>nexus-staging-maven-plugin</artifactId>
+            </plugin>
         </plugins>
     </build>
+    <profiles>
+        <profile>
+            <id>release</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-gpg-plugin</artifactId>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+    </profiles>
 
     <dependencies>
         <dependency>
