--- a/pom.xml
+++ b/pom.xml
@@ -34,7 +34,8 @@
 
     <scm>
         <connection>scm:git:git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</connection>
-        <developerConnection>scm:git:git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</developerConnection>
+        <developerConnection>scm:git:git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git
+        </developerConnection>
         <url>git@github.com:VincentBlouin/bubl.guru_neo4j-graph-manipulator.git</url>
     </scm>
 
@@ -122,6 +123,17 @@
 
         <dependency>
             <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-jdbc</artifactId>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j</groupId>
+            <artifactId>neo4j-rest-graphdb</artifactId>
+            <version>2.0.1</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
             <type>test-jar</type>
             <scope>test</scope>
@@ -138,15 +150,9 @@
         </dependency>
 
         <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-rest-graphdb</artifactId>
-        </dependency>
-
-        <dependency>
             <groupId>com.google.inject.extensions</groupId>
             <artifactId>guice-assistedinject</artifactId>
         </dependency>
-
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
