--- a/pom.xml
+++ b/pom.xml
@@ -127,6 +127,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.neo4j.procedure</groupId>
+            <artifactId>apoc</artifactId>
+            <version>3.5.0.4</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-cypher</artifactId>
         </dependency>
