search results limited

--- a/pom.xml
+++ b/pom.xml
@@ -142,12 +142,14 @@
             <artifactId>neo4j-kernel</artifactId>
             <version>3.5.11</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-io</artifactId>
             <version>3.5.11</version>
             <type>test-jar</type>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
