--- a/pom.xml
+++ b/pom.xml
@@ -122,13 +122,7 @@
         <dependency>
             <groupId>org.neo4j.driver</groupId>
             <artifactId>neo4j-java-driver</artifactId>
-            <version>1.7.5</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.neo4j.procedure</groupId>
-            <artifactId>apoc</artifactId>
-            <version>3.5.0.13</version>
+            <version>4.1.1</version>
         </dependency>
 
         <dependency>
@@ -137,16 +131,23 @@
         </dependency>
 
         <dependency>
+            <groupId>org.neo4j.procedure</groupId>
+            <artifactId>apoc</artifactId>
+            <version>4.1.0.2</version>
+            <classifier>all</classifier>
+        </dependency>
+
+        <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-kernel</artifactId>
-            <version>3.5.14</version>
+            <version>4.1.3</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.neo4j</groupId>
             <artifactId>neo4j-io</artifactId>
-            <version>3.5.14</version>
+            <version>4.1.3</version>
             <type>test-jar</type>
             <scope>test</scope>
         </dependency>
