--- a/pom.xml
+++ b/pom.xml
@@ -113,11 +113,6 @@
             <artifactId>common-utils</artifactId>
             <version>1.0.0-SNAPSHOT</version>
         </dependency>
-        
-        <dependency>
-            <groupId>org.neo4j</groupId>
-            <artifactId>neo4j</artifactId>
-        </dependency>
 
         <dependency>
             <groupId>org.neo4j.driver</groupId>
@@ -127,7 +122,8 @@
 
         <dependency>
             <groupId>org.neo4j</groupId>
-            <artifactId>neo4j-cypher</artifactId>
+            <artifactId>neo4j</artifactId>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
@@ -135,6 +131,7 @@
             <artifactId>apoc</artifactId>
             <version>4.1.0.2</version>
             <classifier>all</classifier>
+            <scope>test</scope>
         </dependency>
 
         <dependency>
